# crypto-signals-mcp

./: Dockerfile  README.md  mcpize.yaml  pyproject.toml  render.yaml  server.json  server.py
src/crypto_signals_mcp/: __init__.py  server.py
src/crypto_signals_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
