[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signals-mcp"
version = "0.1.0"
description = "MCP server for real-time crypto volume anomaly detection across 50+ tokens"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "MarcinDudekDev", email = "marcin@curlship.com"},
]
keywords = ["mcp", "crypto", "trading", "signals", "volume-anomaly", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/MarcinDudekDev/crypto-signals-mcp"
Repository = "https://github.com/MarcinDudekDev/crypto-signals-mcp"
Issues = "https://github.com/MarcinDudekDev/crypto-signals-mcp/issues"

[project.scripts]
crypto-signals-mcp = "crypto_signals_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
